--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: A personal portfolio website of Akash Anand
 
 # User settings
 username: Akash Anand
-user_description: I am an experienced Data Warehousing and React, Javascript engineer with a proven skillset of programming in Python, C++ and R. I am proficient in writing clean and organised code and a responsible team player. I have strong proficiency in working on multiple relational and analytical databases and writing complex SQL queries for data validation and provide quicker and accurate analytical solutions. Through my coursework I have further deepened my understanding of Deep Learning, Machine Learning, Statistics and Signal Processing. I am self motivated, experienced in problem-solving and praised for showing an innate ability to pick up any new technology quickly. 
+user_description: I am an experienced Data Warehousing and React/Javascript engineer with strong programming skills in Python, C++ and R. Through my coursework I have further deepened my understanding of Deep Learning, Machine Learning, Statistics and Signal Processing. I am proficient in writing clean and organised code and a responsible team player. I have strong proficiency in working on multiple relational and analytical databases and writing complex SQL queries for data validation and provide quicker and accurate analytical solutions. I am self motivated, experienced in problem-solving and praised for showing an innate ability to pick up any new technology quickly. 
 user_title: Machine Learning Engineer | Software Developer | Data Engineer | Business Intelligence 
 email: tv.akash@gmail.com
 twitter_username: akash_tv
